# simple-runtime-analyzer

./: .clang-format  .clang-format.yml  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CODE OF CONDUCT.md  CODE_OF_CONDUCT.md  Doxyfile  LICENSE  LICENSE.md  Makefile  README.md  README_ES.MD  annotated.html  classes.html  concepts.html  conceptsra_1_1_chrono_duration.html  conceptsra_1_1_has_size.html  conceptsra_1_1detail_1_1_filler_function.html  conceptsra_1_1detail_1_1_sample_serializer.html  conceptsra_1_1detail_1_1_stream_insertable.html  custom.css  dir_49e56c817e5e54854c35e136979f97ca.html  dir_7bd2f7907fff0a5c0ce77c40b113a1b9.html  dir_7bd2f7907fff0a5c0ce77c40b113a1b9_dep.dot  dir_d44c64559bbebec7f509842c48db8b23.html  doxygen_crawl.html  functions.html  functions_func.html  functions_vars.html  graph_legend.html  index.html  index.js  md_docs_2output__formats.html  md_docs_2plot__generation.html  md_docs_2runtime__analyzer.html  md_docs_2runtime__reporter.html  md_docs_2sample__utilities.html  (+18 more)
.github/: CODE OF CONDUCT ES.md  CODE_OF_CONDUCT_ES.md  CONTRIBUTING ES.md  CONTRIBUTING.md  CONTRIBUTING_ES.md  README_ES.md
docs/: formats.dox  index.dox  measure_time.dox  output_formats.md  plot.dox  plot_generation.md  runtime_analyzer.md  runtime_reporter.md  sample_utilities.md  sample_utils.dox  usage_notes.dox  usage_notes.md
docs/doxygen-custom/: DoxygenLayout.xml  custom.css  header.html
docs/extra/: example.dox
docs/html/: annotated.html  annotated_dup.js  classes.html  concepts.html  concepts.js  dir_49e56c817e5e54854c35e136979f97ca.html  dir_5ccea4055fdf26cd97ad75656b2f2959.html  dir_5ccea4055fdf26cd97ad75656b2f2959_dep.dot  dir_7bd2f7907fff0a5c0ce77c40b113a1b9.html  dir_7bd2f7907fff0a5c0ce77c40b113a1b9_dep.dot  dir_d44c64559bbebec7f509842c48db8b23.html  example_8dox.html  files.html  formats.html  formats_8dox.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_func.html  graph_legend.html  index.html  index.js  index_8dox.html  md_docs_2runtime__analyzer.html  md_docs_2runtime__reporter.html  measure__time_8dox.html  measure__time_8hpp.html  measure__time_8hpp__incl.dot  measure__time_8hpp_source.html  namespacemembers.html  namespacemembers_func.html  pages.html  plot_8dox.html  runtime__reporter_8hpp_source.html  sample__utilities_8hpp_source.html  sample__utils_8dox.html  sample__utils_8hpp.html  sample__utils_8hpp__incl.dot  sample__utils_8hpp_source.html  (+7 more)
docs/html/search/: all_1.js  all_10.js  all_14.js  all_2.js  all_3.js  all_4.js  all_7.js  all_8.js  all_a.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  concepts_0.js  files_1.js  files_3.js  files_4.js  files_5.js  files_6.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_6.js  namespaces_0.js  pages_0.js  pages_1.js  pages_2.js  pages_3.js  pages_4.js  pages_5.js  pages_6.js  pages_8.js  pages_a.js  searchdata.js  variables_0.js  variables_1.js  (+1 more)
example/: Makefile
example/src/: example.cpp
include/shineknightdev/: measure_time.hpp  runtime_analyzer.hpp  runtime_reporter.hpp  sample_utilities.hpp  sample_utils.hpp
scripts/: plot.py
search/: all_0.js  all_11.js  all_12.js  all_13.js  all_15.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  functions_1.js  functions_2.js  functions_4.js  functions_5.js  functions_7.js  pages_1.js  pages_2.js  pages_3.js  pages_4.js  pages_6.js  pages_7.js  pages_9.js  searchdata.js  variables_0.js  variables_2.js  variables_3.js
src/: measure_times.cpp  process_sequence.cpp  process_sequence.hpp
